text alignment fixed

--- a/src/app/user/user-dashboard/users-will/tell-us-about-yourself/tell-us-about-yourself.component.css
+++ b/src/app/user/user-dashboard/users-will/tell-us-about-yourself/tell-us-about-yourself.component.css
@@ -64,7 +64,7 @@
     display: block;
     font-weight: normal;
     font-size: 18px;
-    text-align: center;
+    text-align: left;
 }
 .main-content .form-control{
     font-size: 16px;
